Add cross-version testing for Spring Boot

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.0.6</version>
+    <version>3.1.0</version>
     <relativePath/>
   </parent>
 
@@ -38,10 +38,6 @@
   <properties>
     <java.version>17</java.version>
     <notion-sdk-jvm.version>1.8.0</notion-sdk-jvm.version>
-    <!-- Dependency versions overriding -->
-    <assertj.version>3.24.2</assertj.version>
-    <junit-jupiter.version>5.9.3</junit-jupiter.version>
-    <mockito.version>5.2.0</mockito.version>
   </properties>
 
   <dependencyManagement>
@@ -84,6 +80,12 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.tngtech.archunit</groupId>
+      <artifactId>archunit</artifactId>
+      <version>1.0.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
