--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -26,3 +26,29 @@ jobs:
           version: latest
       - name: Test
         run: ./mvnw $MAVEN_ARGS verify
+
+  test_spring_boot:
+
+    name: Spring Boot ${{ matrix.spring }}
+    strategy:
+      fail-fast: false
+      matrix:
+        spring: [3.0.6, 3.0.7]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Set Spring Boot ${{ matrix.spring }}
+        run: >
+          ./mvnw $MAVEN_ARGS versions:update-parent
+          -DgenerateBackupPoms=false
+          -DparentVersion=${{ matrix.spring }}
+          -DskipResolution
+      - name: Test
+        run: ./mvnw $MAVEN_ARGS verify
