Enforce non-exposing of Notion JVM SDK types

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
     </dependency>
     <dependency>
       <groupId>com.tngtech.archunit</groupId>
-      <artifactId>archunit</artifactId>
+      <artifactId>archunit-junit5</artifactId>
       <version>1.0.1</version>
       <scope>test</scope>
     </dependency>
