--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        spring: [3.0.6, 3.0.7]
+        spring: [3.0.7]
     runs-on: ubuntu-latest
 
     steps:
