--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -24,8 +24,10 @@ jobs:
           website: jdk.java.net
           release: ${{ matrix.java }}
           version: latest
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Test
-        run: ./mvnw $MAVEN_ARGS verify
+        run: ./gradlew build
 
   test_spring_boot:
 
@@ -43,11 +45,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
-      - name: Set Spring Boot ${{ matrix.spring }}
-        run: >
-          ./mvnw $MAVEN_ARGS versions:update-parent
-          -DparentVersion=${{ matrix.spring }}
-          -DskipResolution
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Test
-        run: ./mvnw $MAVEN_ARGS verify
+        run: ./gradlew build -PspringBootVersion=${{ matrix.spring }}
