--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,6 @@ name: CI
 
 on: [push, pull_request]
 
-env:
-  MAVEN_ARGS: -B -V -ntp -e -Djansi.passthrough=true -Dstyle.color=always -Djacoco.skip=true
-
 jobs:
 
   java_17:
@@ -19,6 +16,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Test
-        run: ./mvnw $MAVEN_ARGS verify
+        run: ./gradlew build
