--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-### Maven ###
-target/
-.mvn/wrapper/maven-wrapper.jar
+### Gradle ###
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### STS ###
 .apt_generated
