Add release configuration

--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -3,7 +3,7 @@ name: Cross-Version
 on: [push, pull_request]
 
 env:
-  MAVEN_ARGS: -B -V -ntp -e -Djansi.passthrough=true -Dstyle.color=always -Djacoco.skip=true
+  MAVEN_ARGS: -B -V -ntp -e -Djansi.passthrough=true -Dstyle.color=always
 
 jobs:
 
