--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>io.github.scordio</groupId>
   <artifactId>spring-batch-notion</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0-M1</version>
 
   <name>Spring Batch Notion</name>
   <description>Spring Batch extension for Notion</description>
