--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -27,13 +27,38 @@ jobs:
       - name: Test
         run: ./mvnw $MAVEN_ARGS verify
 
-  test_spring_boot:
+  test_spring_boot_3_0:
 
     name: Spring Boot ${{ matrix.spring }}
     strategy:
       fail-fast: false
       matrix:
         spring: [3.0.0, 3.0.9, 3.1.0]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Set Spring Boot ${{ matrix.spring }}
+        run: >
+          ./mvnw $MAVEN_ARGS versions:update-parent
+          -DparentVersion=${{ matrix.spring }}
+          -DskipResolution
+      - name: Test
+        run: ./mvnw $MAVEN_ARGS verify -Dkotlin.version=1.8.0
+
+  test_spring_boot_3_1:
+
+    name: Spring Boot ${{ matrix.spring }}
+    strategy:
+      fail-fast: false
+      matrix:
+        spring: [3.1.0]
     runs-on: ubuntu-latest
 
     steps:
