--- a/pom.xml
+++ b/pom.xml
@@ -267,5 +267,15 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>spring-milestone</id>
+      <repositories>
+        <repository>
+          <id>spring-milestone</id>
+          <name>Spring Milestones</name>
+          <url>https://repo.spring.io/milestone</url>
+        </repository>
+      </repositories>
+    </profile>
   </profiles>
 </project>
