--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,5 @@ jobs:
           cache: maven
       - name: Test
         run: ./mvnw $MAVEN_ARGS verify javadoc:javadoc
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@v3
