--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <developer>
       <id>scordio</id>
       <name>Stefano Cordio</name>
+      <email>stefano.cordio@gmail.com</email>
       <url>https://github.com/scordio</url>
     </developer>
   </developers>
