--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: 'temurin'
+          java-version: '21'
+          distribution: 'zulu'
 
       - name: Publish to Maven Central
         run: ./mvnw $MAVEN_ARGS -Prelease deploy
