--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -49,7 +49,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        spring: [3.0.0, 3.0.11, 3.1.0, 3.2.0-M3]
+        spring: [3.0.0, 3.0.12, 3.1.0, 3.2.0-RC1]
     runs-on: ubuntu-latest
 
     steps:
