Replace `spring-cloud-contract-wiremock` with `wiremock-spring-boot`

--- a/pom.xml
+++ b/pom.xml
@@ -43,17 +43,6 @@
     <notion-sdk-jvm.version>1.11.1</notion-sdk-jvm.version>
   </properties>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>2022.0.4</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
     <!-- Compile -->
     <dependency>
@@ -107,8 +96,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-contract-wiremock</artifactId>
+      <groupId>org.wiremock.integrations</groupId>
+      <artifactId>wiremock-spring-boot</artifactId>
+      <version>3.0.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
