--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -49,7 +49,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        spring: [3.0.0, 3.0.13, 3.1.0, 3.1.7]
+        spring: [3.1.0, 3.1.8, 3.3.0-M1]
     runs-on: ubuntu-latest
 
     steps:
