--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [22]
+        java: [22, 23]
     runs-on: ubuntu-latest
 
     steps:
