--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.2</version>
+    <version>3.2.3</version>
     <relativePath/>
   </parent>
 
@@ -129,7 +129,7 @@
             </additionalDependencies>
             <failOnWarnings>true</failOnWarnings>
             <links>
-              <link>https://docs.spring.io/spring-batch/docs/${spring-batch.version}/</link>
+              <link>https://docs.spring.io/spring-batch/docs/${spring-batch.version}/api/</link>
               <link>https://docs.spring.io/spring-framework/docs/${spring-framework.version}/api/</link>
             </links>
           </configuration>
