--- a/.github/workflows/cross-version.yml
+++ b/.github/workflows/cross-version.yml
@@ -49,7 +49,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        spring: [3.2.0, 3.2.7]
+        spring: [3.2.0, 3.2.8, 3.4.0-M1]
     runs-on: ubuntu-latest
 
     steps:
